Club Badges were reszied. Overlapping has been fixed on table data for mobile screens

--- a/src/css/LeagueButtons.css
+++ b/src/css/LeagueButtons.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    padding-top: 30px;
+    padding-top: 35px;
 }
 
 .league-col {
